--- a/public/assets/locales/es/translation.json
+++ b/public/assets/locales/es/translation.json
@@ -13,7 +13,8 @@
     "konecta-text": "Este proyecto lo realicé junto con mi grupo durante el Curso de Desarrollo Web. El front-end se realizó en React y el back-end con Spring Boot, utilizando AWS para nuestros servidores, bases de datos y almacenamiento.",
     "portfolio-text": "Este es mi propio portfolio, fue hecho con React, usando algunos templates de W3Schools y Bootstrap, poniendo en práctica mis habilidades en HTML, CSS, JS y Bootstrap. He utilizado Hostinger para alojar mi sitio web.",
     "photography-text": "Este proyecto fue hecho para un amigo que es fotógrafo, básicamente es un portfolio de su trabajo. Lo he hecho con Wordpress y el complemento de Elementor, fue mi primer acercamiento a estas herramientas.",
-    "projectboost-text": "Uno de los proyectos para el curso de GameDev.tv Team. Es un sencillo juego donde el jugador debe llegar a la plataforma de destino enfrentándosea diferentes obstáculos, cuanto más rápido lo haga, más puntos sumará.",
+    "projectboost-text": "Proyecto para el curso de GameDev.tv Team, creado en C# y Unity, usando sólo formas primarias. El jugador debe llegar a la plataforma de destino enfrentándosea diferentes obstáculos, cuanto más rápido lo haga, más puntos sumará.",
+    "tilevania-text": "Proyecto para el curso de GameDev.tv Team, creado en C# y Unity 2D. En este juego de plataforma, el jugador deberá recorrer los niveles, enfrentarse a enemigos y recolectar la mayor cantidad de monedas posibles.",
 
     "about-1": "Mi nombre es Ignacio Albiol, soy desarrollador web y de videojuegos, y vivo en Barcelona. Durante los últimos años he atravesado un proceso de reconversión profesional, pasando desde el sector educativo hacia el mundo de la programación y desarrollo. Inicié mi camino aprendiendo Unity y C# de forma autodidacta, y luego consolidé mis habilidades con una formación integral en desarrollo de aplicaciones web full-stack.",
     "about-2": "En cuanto a mis habilidades interpersonales, me considero una persona seria, responsable, decidida y trabajadora. Me gusta sumergirme en proyectos diversos, y he aprendido a trabajar en equipo de manera efectiva, extrayendo lo mejor de la colaboración con mis compañeros. Además, soy paciente y resiliente, cualidades clave en el mundo del desarrollo, y que he perfeccionado a lo largo de mi trayectoria profesional como educador.",
@@ -80,14 +81,17 @@
     "design-portfolio-text": "El diseño está principalmente pensado para que sea lo más accesible posible, la web posee un 100% en accesibilidad medido utilizando la herramienta Lighthouse de Google Chrome. Para lograr esto, he evitado el uso de muchos colores y he utilizado contrastes altos entre tipografía y fondos. Por otro lado, he utilizado Georgia Serif como tipo de letra ya que es una de las tantas que favorecen la lectura. A su vez, cada imagen tiene su descripción como texto alternativo y, tanto los botones como el formulario, tienen sus respectivos aria-label indicando su función.",
 
     "form-portfolio": "Formulario de contacto: EmailJS",
-    "form-portfolio-text": "...... estoy en ello .....",
+    "form-portfolio-text-1": "Para el formulario de contacto he decidido utilizar EmailJS, una herramienta gratuita para redireccionar los mensajes sin necesidad de un server.",
+    "form-portfolio-text-2": "El funcionamiento es muy sencillo, creas un usuario que vinculas con tu cuenta de correo electrónico a la cual quieres redirigir los mensajes, creas un template para el mail que recibirás cuando alguien te contacte junto con los campos que debe completar la persona. Por último, instalas el paquete y creas la función dentro del componente del formulario en Ract. En la misma web de EmailJS tienes un tutorial para su instalación y uso.",
 
-    "func-portfolio": "Funcionalidades Agregadas",
+    "func-portfolio": "Funcionalidades Extras",
     "func-portfolio-intro": "He creado dos funcionalidades para que el usuario tenga una mejor experiencia al visitar la página, la posibilidad de cambiar entre light y dark mode y de seleccionar el idioma (por el momento disponible para Inglés, Catalán y Español).",
     "func-portfolio-text-1": "He elegido hacer el cambio de un theme al otro mediante una función que agregue un tipo de clase específico al componente body (className=”dark”) y utilizar CSS para aplicar los cambios en el estilo (.dark).",
     "func-portfolio-text-2": "¿Cómo funciona? Al hacer click en el botón y pasar del Light al Dark Mode, este theme se aplica como nombre de clase al elemento body del HTML, por lo que el className del body será “dark”. CSS verá este cambio en la clase de body, y aplicará los estilos correspondientes con la transición indicada. Al volver a hacer click, la clase “dark” se eliminará y volverá a su estado anterior con sus respectivos estilos.",
     "func-portfolio-text-3": "Para poder acceder a esta información, saber cuál es el theme actual, y a partir de ahí poder actualizarlo, he utilizado los hooks useEffect y useState.",
 
-    "lang-select-portfolio": "Selección de Idiomas",
-    "lang-select-portfolio-text": "...... estoy en ello ..... He usado i18next."
+    "lang-select-portfolio": "Selector de Idiomas",
+    "lang-select-portfolio-text-1": "Para la selección de idioma he utilizado el framework react-i18next basado en i18next que nos permite crear una configuración muy variada y un set up personalizado para nuestros idiomas. En mí caso he optado por intentar que el browser detecte el idioma del usuario, y si este está disponible, implementarlo. En caso de que sea un idioma no disponible, el lenguaje por defecto seleccionado es inglés.",
+    "lang-select-portfolio-text-2": "Por otro lado, he creado tres ficheros json, uno para cada idioma disponible, para transmitir los datos. Dentro de cada json he creado las propiedades con el mismo nombre de referencia en cada idioma, asignadas a la cadena de texto correspondiente. Al seleccionar el idioma, buscará esa propiedad a la que se hace referencia dentro del json y reemplazará la cadena de texto por la del idioma que toque."
+
 }
