Update BackToTop Feature

--- a/public/assets/locales/cat/translation.json
+++ b/public/assets/locales/cat/translation.json
@@ -6,6 +6,7 @@
     
     "header-subtitle": "Desenvolupador Web i de Videojocs.",
     "download-cv": "Descarrega CV",
+    "back-to-top": "Torna a dalt",
 
     "learn-more": "Més informació",
     "visit-site": "Visita la Web",
