--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -6,6 +6,7 @@
     
     "header-subtitle": "Game and Web Developer.",
     "download-cv": "Download Resume",
+    "back-to-top": "Back to Top",
 
     "learn-more": "Learn More",
     "visit-site": "Visit Site",
