--- a/public/assets/locales/es/translation.json
+++ b/public/assets/locales/es/translation.json
@@ -6,6 +6,7 @@
     
     "header-subtitle": "Desarrollador Web y de Videojuegos.",
     "download-cv": "Descargar CV",
+    "back-to-top": "Volver al Inicio",
 
     "learn-more": "Más información",
     "visit-site": "Visitar Web",
