--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -64,7 +64,7 @@
 
     "colaborators-konecta": "Collaborators:",
 
-    "skills-used": "Used tools:",
+    "skills-used": "Tools used:",
 
     "idea-laphoto-1": "This project arises from two factors. On the one hand, my desire to continue learning and getting to know new tools. On the other hand, friendship, I have a good friend of mine who is a photographer, and he did not have a website on which to show his work and projects.",
     "idea-laphoto-2": "This is why I decided to create a photography portfolio using WordPress and Elementor, so that it is easy to use and keep updated, and above all so that he himself is able to manage the content of the page in a simple way.",
