--- a/public/assets/locales/es/translation.json
+++ b/public/assets/locales/es/translation.json
@@ -21,7 +21,7 @@
 
     "about-1": "Mi nombre es Ignacio Albiol, soy desarrollador web y de videojuegos, y vivo en Barcelona. Durante los últimos años he atravesado un proceso de reconversión profesional, pasando desde el sector educativo hacia el mundo de la programación y desarrollo. Inicié mi camino aprendiendo Unity y C# de forma autodidacta, y luego consolidé mis habilidades con una formación integral en desarrollo de aplicaciones web full-stack.",
     "about-2": "En cuanto a mis habilidades interpersonales, me considero una persona seria, responsable, decidida y trabajadora. Me gusta sumergirme en proyectos diversos, y he aprendido a trabajar en equipo de manera efectiva, extrayendo lo mejor de la colaboración con mis compañeros. Además, soy paciente y resiliente, cualidades clave en el mundo del desarrollo, y que he perfeccionado a lo largo de mi trayectoria profesional como educador.",
-    "about-3": "Actualmente, me encuentro comprometido con el continuo crecimiento y aprendizaje en estas apasionantes áreas. Emocionado por el futuro, y listo para aportar mi experiencia en el desarrollo de nuevos proyectos.",
+    "about-3": "Actualmente estoy participando en la IT Academy realizando un bootcamp de PHP Full-Stack, comprometido con el continuo crecimiento y aprendizaje en estas apasionantes áreas. Emocionado por el futuro, y listo para aportar mi experiencia en el desarrollo de nuevos proyectos.",
 
     "my-skills": "Mis Habilidades",
     "game-dev": "Desarrollo de Videojuegos",
